@@ -1,3 +1,8 @@
+2012-03-27  Martin Jambor  <mjambor@suse.cz>
+
+	PR middle-end/52693
+	* gcc.dg/torture/pr52693.c: New test.
+
 2012-03-27  Meador Inge  <meadori@codesourcery.com>
 
 	PR c++/52672
