@@ -1,3 +1,10 @@
+2012-03-27  Martin Jambor  <mjambor@suse.cz>
+
+	PR middle-end/52693
+	* tree-sra.c (sra_modify_assign): Do not call
+	load_assign_lhs_subreplacements when working with an unscalarizable
+	region.
+
 2012-03-27  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/52698
